--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
                             <i class="bi bi-envelope"></i>
                         </div>
                         <h3 class="contact-title">البريد الإلكتروني</h3>
-                        <p class="contact-info">ammar.ashraf@example.com</p>
+                        <p class="contact-info">ammarashraf332@gmail.com</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
@@ -587,7 +587,7 @@
                             <i class="bi bi-linkedin"></i>
                         </div>
                         <h3 class="contact-title">LinkedIn</h3>
-                        <p class="contact-info">linkedin.com/in/ammar-ashraf</p>
+                        <a href="https://www.linkedin.com/in/ammar-kabeel-417644273" target="_blank" class="contact-info">www.linkedin.com/in/ammar-kabeel-417644273</a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
@@ -596,7 +596,7 @@
                             <i class="bi bi-whatsapp"></i>
                         </div>
                         <h3 class="contact-title">واتساب</h3>
-                        <p class="contact-info">+20 123 456 7890</p>
+                        <a href="https://wa.me/201147246390?text=مرحبا%20حابب%20أتواصل" target="_blank" class="contact-info">01147246390</a>
                     </div>
                 </div>
             </div>
