--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         /* Hero Section */
         .hero-section {
             min-height: 100vh;
-            background: linear-gradient(135deg, var(--primary-color) 0%, var(--secondary-color) 100%);
+            background: url('images/hero-background.png') no-repeat center center / cover;
             display: flex;
             align-items: center;
             position: relative;
@@ -607,15 +607,9 @@
     <footer class="footer">
         <div class="container">
             <div class="social-links">
-                <a href="#" class="social-link">
-                    <i class="bi bi-envelope"></i>
-                </a>
-                <a href="#" class="social-link">
-                    <i class="bi bi-linkedin"></i>
-                </a>
-                <a href="#" class="social-link">
-                    <i class="bi bi-whatsapp"></i>
-                </a>
+                <a href="mailto:ammarashraf332@gmail.com" class="social-link"><i class="bi bi-envelope"></i></a>
+                <a href="https://www.linkedin.com/in/ammar-kabeel-417644273" target="_blank" class="social-link"><i class="bi bi-linkedin"></i></a>
+                <a href="https://wa.me/201147246390?text=مرحبا%20حابب%20أتواصل" target="_blank" class="social-link"><i class="bi bi-whatsapp"></i></a>
             </div>
             <p>&copy; 2025 عمار أشرف. جميع الحقوق محفوظة.</p>
         </div>
